# sockets

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  clean.sh
.github/workflows/: c-cpp.yml
include/: acceptor.hpp  address.hpp  buffer.hpp  file_tree.hpp  socket.hpp
lib/cmake/cppcoro/: cppcoroTargets-noconfig.cmake  cppcoroTargets.cmake
seeds/: seed_0  seed_1  seed_2  seed_3  seed_4
src/: client.cpp  server.cpp
tests/: buffer_test.cpp  tree_test.cpp
